--- a/packages/ampath-esm-clinic-dashboard-hiv-lists/package.json
+++ b/packages/ampath-esm-clinic-dashboard-hiv-lists/package.json
@@ -30,11 +30,12 @@
     "url": "https://github.com/AMPATH/ampath-esm-clinic-dashboard/issues"
   },
   "dependencies": {
+    "@openmrs/esm-api": "^3.0.0",
     "single-spa-react": "^2.10.2"
   },
   "devDependencies": {
     "@openmrs/esm-api": "^1.2.2",
-    "@openmrs/esm-error-handling": "^1.1.0",
+    "@openmrs/esm-error-handling": "^1.1.1",
     "@openmrs/esm-module-config": "^1.2.0",
     "@openmrs/react-root-decorator": "^2.0.0",
     "@types/react": "^16.9.2",
