--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^25.2.2",
+    "@testing-library/jest-dom": "^5.7.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.0.6",
@@ -35,6 +36,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@testing-library/react": "^11.0.2",
     "identity-obj-proxy": "^3.0.0",
     "moment": "^2.27.0",
