--- a/packages/ampath-esm-clinic-dashboard-hiv-lists/package.json
+++ b/packages/ampath-esm-clinic-dashboard-hiv-lists/package.json
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/AMPATH/ampath-esm-clinic-dashboard.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --port ${port:-8080}",
+    "start": "webpack-dev-server --port ${port:-8080} --https",
     "build": "webpack --mode production",
     "test": "jest --config jest.config.json"
   },
@@ -30,8 +30,7 @@
     "url": "https://github.com/AMPATH/ampath-esm-clinic-dashboard/issues"
   },
   "dependencies": {
-    "@openmrs/esm-api": "^3.0.0",
-    "single-spa-react": "^2.10.2"
+    "@babel/polyfill": "^7.11.5"
   },
   "devDependencies": {
     "@openmrs/esm-api": "^3.0.0",
@@ -43,9 +42,11 @@
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack-env": "^1.15.2",
+    "lodash-es": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "single-spa-react": "^2.10.2"
   }
 }
