--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,14 @@
 {
   "extends": [
     "ts-react-important-stuff",
-    "plugin:prettier/recommended"
-  ]
+    "plugin:prettier/recommended",
+    "eslint:recommended"
+  ],
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "no-console": "error",
+    "no-var": "error"
+  }
 }
