--- a/package.json
+++ b/package.json
@@ -7,7 +7,20 @@
   "scripts": {
     "debug": "lerna run start --scope @ampath/esm-clinic-dashboard-${name:-hiv-lists} --stream",
     "build": "lerna run build --stream",
-    "prettier": "prettier"
+    "prettier": "prettier",
+    "lint": "lerna run lint",
+    "typescript": "lerna run typescript"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged &&  yarn run typescript && yarn run lint "
+    }
+  },
+  "lint-staged": {
+    "*.{jsx,tsx,ts,css}": [
+      "prettier --write .",
+      "yarn run lint"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -16,19 +29,27 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^25.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.0.6",
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-ts-react-important-stuff": "^3.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "husky": "^4.3.0",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
     "lerna": "^3.13.0",
-    "prettier": "2.0.5",
+    "prettier": "2.1.2",
+    "pretty-quick": "^3.0.2",
     "systemjs-webpack-interop": "^1.1.0",
-    "typescript": "^3.9.6",
+    "typescript": "^4.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
